# ml_sim_kc

./: README.md  pyproject.toml
intern/Asymmetric_metrics/: Asymmetric metrics_test.py  asymmetric_metrics_1.py  asymmetric_metrics_2.py
intern/OOP1/: OOP1.py
intern/OOP2/: OOP2_1.py  OOP2_2.py
intern/async_await/: async_await.py  sync_version.py
intern/classification_metrics/: classification_metrics_1.py  classification_metrics_2.py  classification_metrics_3.py
intern/cold_start/: cold_start_1.py  cold_start_experiment.ipynb
intern/dau/: dau1.sql
intern/decision tree/: 1_feature_split.py  Information_criterion.py  all_feature_split.py  decision_tree_regressor.py  feature_split_test.ipynb  load-delay_days_decision_tree_1000.csv  load_data.sql  node.py  predict.py  tree_visualization.py
intern/generators/: generators_1.py
intern/gradient_boosting/: Approximation_by_average.py  SGD.py  gradient_boosting.py  gradient_boosting_test.ipynb  mse_mae_gradient.py
intern/hello pytest/: metrics.py  test_metrics.py
intern/higher-order_functions/: higher-order_functions1.py
intern/makefile/: makefile
intern/memoization/: memization_1.py
intern/method_decorators/: method_decorators.py
intern/mutable word count/: test_utils.py  utils.py
intern/negative_tests/: test_metrics.py
intern/quantile t-test/: quanitl_t-test_1.py  quantile_t-test.ipynb  quantile_t-test_2.py
intern/recall@k/: recall@k_1.py  recall@k_test.ipynb
intern/regression_metrics/: regression_metrics_1.py  regression_metrics_2.py
intern/rotation_bag/: rotation_bag_1.py  (+1 more)
(+95 files in other folders)
