[tool.poetry]
name = "ml-sim-kc"
version = "0.1.0"
description = ""
authors = ["Neesty <mysteriousneutrino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.1"
jupyterlab = "^4.0.10"
notebook = "^7.0.6"
nltk = "^3.8.1"
catboost = "^1.2.2"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
requests = "^2.31.0"
fastapi = "^0.108.0"
polars = "^0.20.2"
tqdm = "^4.66.1"
statsmodels = "^0.14.1"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
